@@ -56,7 +56,7 @@ setup:
 lib: $(OBJS)
 	$(CXX) $(CXXFLAGS) -shared $(OBJS) $(ROOTLIBS) -o $(LIBDIR)/$(LIB) 
 
-bin: jet_inspect_profiles jet_inspect_histos jet_inspect_graphs
+bin: jet_inspect_profiles jet_inspect_histos jet_inspect_graphs jet_calcxsec
 
 jet_inspect_profiles:
 	$(CXX) $(CXXFLAGS) bin/jet_inspect_profiles_x.cc $(LIBS) $(ROOTLIBS) \
@@ -70,12 +70,17 @@ jet_inspect_graphs:
 	$(CXX) $(CXXFLAGS) bin/jet_inspect_graphs_x.cc $(LIBS) $(ROOTLIBS) \
         -o $(BINDIR)/jet_inspect_graphs_x
 
+jet_calcxsec:
+	$(CXX) $(CXXFLAGS) bin/jet_calcxsec_x.cc $(LIBS) $(ROOTLIBS) \
+        -o $(BINDIR)/jet_calcxsec_x
+
 
 clean:
 	rm -rf $(OBJS) $(LIBDIR)/$(LIB) JetMETAnalysis \
                $(BINDIR)/jet_inspect_profiles_x \
                $(BINDIR)/jet_inspect_histos_x \
-               $(BINDIR)/jet_inspect_graphs_x
+               $(BINDIR)/jet_inspect_graphs_x \
+               $(BINDIR)/jet_calcxsec_x
 
 
 ################################################################################
