@@ -1,0 +1,9 @@
+sample = QCD
+inputs = QCD15:8.762e+08
+         QCD30:6.041e+07
+	 QCD80:9.238e+05
+	 QCD170:2.547e+04
+	 QCD300:1.256e+03
+	 QCD470:8.798e+01
+	 QCD800:2.186e+00
+         QCD1400:1.122e-02
